--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,11 +125,11 @@ web = [
     "rdflib",
     "rdflib-jsonld",
     "rdflib-endpoint",
-    "flask<2.2.4",
-    "werkzeug<2.3.0",
+    "flask>=3.0",
+    "werkzeug>=3.0",
     "fastapi",
     "uvicorn",
-    "bootstrap-flask<=2.0.0",
+    "bootstrap-flask>=2.4",
     "markdown",
     "curies[fastapi]",
     "a2wsgi",
